<resources>
    <string name="app_name">PictureOfTheDay</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в Википедии</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="color_theme">Цветовая тема</string>
    <string name="moon_theme">Лунная призма</string>
    <string name="mars_theme">Марс атакует</string>
    <string name="night_chip">Ночь</string>
    <string name="night_mode_tv">Ночной режим</string>
    <string name="photo_of_the_day">Фото дня</string>
    <string name="earth">Земля</string>
    <string name="settings">Настройки</string>
    <string name="tap_for_info">Описание</string>
    <string name="notes">Список дел</string>
    <string name="notes_header">Список дел</string>
    <string name="note_title">Новая задача</string>
    <string name="note_body">Описание</string>
    <string name="save_btn">Сохранить</string>
    <string name="cancel_btn">Отмена</string>
</resources>