<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_photo_of_the_day"
        android:icon="@drawable/ic_baseline_photo_camera"
        android:title="@string/photo_of_the_day" />

    <item
        android:id="@+id/bottom_view_earth"
        android:icon="@drawable/ic_earth"
        android:title="@string/earth" />

    <item
        android:id="@+id/bottom_view_notes"
        android:icon="@drawable/ic_note"
        android:title="@string/notes" />

    <item
        android:id="@+id/bottom_view_wiki"
        android:icon="@drawable/ic_book"
        android:title="@string/wikipedia" />

    <item
        android:id="@+id/bottom_view_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>