<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorSurface">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/color_theme"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/themeChooseChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                android:layout_margin="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/moon_chip"
                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moon_theme" />

            <com.google.android.material.chip.Chip
                android:id="@+id/mars_chip"
                style="@style/Widget.App.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mars_theme" />

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
    </LinearLayout>


</LinearLayout>
